--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper</artifactId>
-      <version>${ZooKeeperVersion}</version>
+      <version>3.4.9</version>
     </dependency>
 
     <dependency>
